# librtlsdr

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.docker  README  README.md  README.orig.md  blacklist-dvb.conf  cross_build_mingw32.sh  cross_build_mingw64.sh  docker-compose.yml  install_raspi.sh  startup_raspi.sh
conf/: rtl_hpsdr.conf  startup.sh
include/: rtl-sdr.h  rtl_hpsdr.h
src/: CMakeLists.txt  Makefile.am  downsample.c  librtlsdr.c  rtl_hpsdr.c  rtl_hpsdr.conf  rtl_sdr.c  rtl_tcp.c  tuner_r82xx.c
src/convenience/: convenience.c  convenience.h
